--- a/1-formularz-html5/index.html
+++ b/1-formularz-html5/index.html
@@ -8,31 +8,31 @@
 </head>
 <body>
     <form action="https://formspree.io/f/xjvlebao" method="post">
-        <label for="firstname">Imię: </label>
-        <input id="firstname" type="text" name="firstname">
-        <label for="lastname">Nazwisko: </label>
-        <input id="lastname" type="text" name="lastname">
-        <label for="email">Email: </label>
-        <input type="email" name="email" id="email">
-        <label for="tel-number">Numer telefonu: </label>
-        <input type="text" name="tel=number" id="tel-number">
-        <label for="miasto">Wybierz miasto</label>
-        <select  id="miasto" name="select">
+        <label for="firstname">Imię: </label><br>
+        <input id="firstname" type="text" name="firstname"><br>
+        <label for="lastname">Nazwisko: </label><br>
+        <input id="lastname" type="text" name="lastname"><br>
+        <label for="email">Email: </label><br>
+        <input type="email" name="email" id="email"><br>
+        <label for="tel-number">Numer telefonu: </label><br>
+        <input type="text" name="tel=number" id="tel-number"><br>
+        <label for="miasto">Wybierz miasto</label><br>
+        <select  id="miasto" name="select"><br>
             <option value="">Kraków</option>
             <option value="">Warszawa</option>
             <option value="">Gdańsk</option>
         </select>
-        <p>Wybierz płeć: </p>
-        <input type="radio" name="gender" id="gender-m">Mężczyzna
-        <input type="radio" name="gender" id="gender-k">Kobieta
-        <p>Zgoda na dane osobowe: </p>
+        <p>Wybierz płeć: </p><br>
+        <input type="radio" name="gender" id="gender-m">Mężczyzna<br>
+        <input type="radio" name="gender" id="gender-k">Kobieta<br>
+        <p>Zgoda na dane osobowe: </p><br>
         <input type="checkbox" name="checkbox" id="dane-osobowe-tak">
         <label for="dane-osobowe-tak">Tak</label>
         <input type="checkbox" name="checkbox" id="dane-osobowe-nie">
-        <label for="dane-osobowe-nie">Nie</label>
-        <label for="textarea">Wiadomość</label>
-        <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
-        <button type="submit">Prześlij</button>
+        <label for="dane-osobowe-nie">Nie</label><br>
+        <label for="textarea">Wiadomość</label><br>
+        <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea><br>
+        <button type="submit">Prześlij</button><br>
     </form>
 </body>
 </html>
