2-struktura-strony-html

--- a/2-struktura-strony-html/index.html
+++ b/2-struktura-strony-html/index.html
@@ -30,7 +30,7 @@
             <h2>Kontakt</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus consequatur quam velit odio eos! Porro quos minus nisi! Facilis animi recusandae consequatur repellendus sapiente saepe quibusdam nam aspernatur commodi aliquid, officiis ex dolore quia dolorem aliquam minima voluptatum, itaque id autem delectus tempore magni laboriosam explicabo alias? Sint, unde, ullam dolore similique quidem qui non error ut accusamus voluptatibus dicta?</p>
             <h3>Tu mnie znajdziesz</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat minus delectus culpa tenetur quam rerum, numquam fugiat quisquam animi sapiente error tempora at iure quo vero fuga praesentium magnam architecto.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat minus delectus culpa tenetur quam rerum, numquam fugiat quisquam animi sapiente error tempora at iure quo vero fuga praesentium magnam architecto. <span><a href="">Link</a></span></p>
         </article>
     </section>
     <footer>
